Fix form inputs not visible - use min-height instead of %
Input fields had height: 20%/30% which doesn't work with
display: block. Changed to min-height with fixed pixel values.

--- a/src/App.css
+++ b/src/App.css
@@ -1329,11 +1329,13 @@ body:hover .cursor {
 }
 
 .form_input {
-  height: 20%;
+  height: auto;
+  min-height: 50px;
 }
 
 .form_textarea {
-  height: 30%;
+  height: auto;
+  min-height: 120px;
 }
 
 .form_input:focus,
